[tool.poetry]
name = "vdatafeed"
version = "0.1.1"
description = ""
authors = ["thync <thync@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
websockets = "^13.0.1"
pydantic = "^2.9.1"
pyjwt = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
